<resources>

    <drawable name="color1">#F5B12A</drawable>

    <drawable name="color2">#525252</drawable>

    <string name="app_name">鲁科智能检测</string>
    <string name="title_tips">提示</string>
    <string name="title_tips_save">保存</string>
    <string name="title_tips_up">提交</string>
    <string name="title_tips_confim">确定</string>
    <string name="title_tips_cancel">取消</string>
    <string name="title_tips_checkname">命名</string>
    <string name="again_out">再点一次退出程序</string>
    <string name="record_video_tip">停止录制</string>
    <string name="can_not_record_tip">暂时无法录制</string>
    <string name="record_space_tip">存储空间不足</string>
    <string name="record_time_end_tip">录制已到限定时长</string>
    <string name="length_video">Length:</string>
    <string name="gravando">Recording...</string>
    <string name="stop">Stop</string>
    <string name="button_ok">OK</string>
    <string name="viewfinderview_status_text1">将二维码放入取景框内</string>
    <string name="QR_code">二维码扫描</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>

    <string name="login_username">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="forgrt_password">忘记密码</string>
    <string name="login_register">注册账号</string>
    <string name="login">登录</string>
    <string name="alert_logout">确定要退出程序?</string>
    <string name="handler_data">业务处理中</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_verify_password">请确认密码</string>
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_relaer_phone">请输入正确手机号码</string>
    <string name="prompt_verify_code">输入验证码</string>
    <string name="no_name_password">账号密码不能为空</string>
    <string name="write_phone">请输入手机号</string>
    <string name="write_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="write_newsure">确认新密码</string>
    <string name="write_password">输入新密码</string>
    <string name="toast_change_password_success">修改密码成功</string>
    <string name="faile_code">验证码错误</string>
    <string name="write_password_agin">请输入新密码</string>
    <string name="md_faile">MD5加密失败</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_network">网络异常！</string>
    <string name="error_invalid_phone">电话号码格式不正确</string>
    <string name="register_success">注册成功</string>
    <string name="agree1">"用户协议"</string>
    <string name="agree2">"隐私政策"</string>
    <string name="scan_tip">Place the code within the frame</string>
    <string name="thickness_gauge">测厚仪</string>
    <string name="menu">菜单</string>
    <string name="action_settings">Settings</string>
    <string name="setting_value">数据处理</string>
    <string name="image_name">文件已存在</string>
    <string name="cover">覆盖</string>

    <!--timeselect-->
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">提交</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="time">时间</string>
    <string name="time1">发生时间</string>
    <string name="title1">标题</string>
    <string name="delet">删除</string>
    <string name="special_data">GPGGA,</string>

    <string name="ble_not_supported">本设备不支持蓝牙</string>
    <string name="please_open_bluetooth_to_use_ble_function">请打开蓝牙以使用蓝牙功能</string>
    <string name="start_scanning_bluetooth_device">开始扫描蓝牙设备&#8230;</string>
    <string name="connecting">开始连接蓝牙设备&#8230;</string>
    <string name="active_disconnected">蓝牙连接已断开</string>
    <string name="write_failure">命令执行失败</string>
    <string name="f_top">阀值上限</string>
    <string name="f_bot">阀值下限</string>
    <string name="rtc_success">转推成功</string>
    <string name="rtc_faile">转推失败</string>



    <string-array name="model_array">
        <item>211223</item>
        <item>5s</item>
    </string-array>

    <string-array name="cpugpu_array">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>
</resources>
