<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.luke_imagevideo_send.http.views.Header
        android:id="@+id/header"
        style="@style/Header"
        app:header_title="@string/login_register"></com.example.luke_imagevideo_send.http.views.Header>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/linelayout_color_bigradion"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_phone" />

        <EditText
            android:id="@+id/etPhone"
            style="@style/EditText"
            android:hint="@string/write_phone"
            android:textColorHint ="@color/white"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/linelayout_color_bigradion"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/etCode"
            style="@style/EditText"
            android:hint="@string/write_code"
            android:textColorHint ="@color/white"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:background="@color/color_bg_selected"
            android:gravity="center"
            android:text="@string/get_code"
            android:layout_marginRight="15dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/linelayout_color_bigradion"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/etPassWord"
            style="@style/EditText"
            android:inputType="textPassword"
            android:hint="@string/login_password"
            android:textColorHint ="@color/white"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/ivSeeNewPw"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_login_unsee" />
    </LinearLayout>


    <Button
        android:id="@+id/btnUp"
        style="@style/Button"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/linelayout_color_bigradion"
        android:text="@string/title_tips_confim" />

</LinearLayout>