<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_frame"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_tips"
        android:textColor="#222222"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="13dp"
        android:lineSpacingMultiplier="1.3"
        android:textColor="@color/xiaohei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/yes"
            android:text="@string/title_tips_confim"
            android:textColor="@color/color_forget_button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/no"
            android:text="@string/title_tips_cancel"
            android:textColor="@color/color_forget_button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/checkName"
            android:text="@string/title_tips_checkname"
            android:textColor="@color/color_forget_button"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>