<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.luke_imagevideo_send.http.views.Header
        android:id="@+id/header"
        style="@style/Header"
        app:header_title="注册登录"
        app:header_is_left_iv_visiable="false">
    </com.example.luke_imagevideo_send.http.views.Header>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@color/color_bg_selected">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="70dp"
                android:src="@drawable/radion_logo"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="150dp"
            android:background="@drawable/linelayout_radion"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:background="@drawable/linelayout_color_bigradion">

                <ImageView
                    style="@style/ImaheView"
                    android:layout_height="wrap_content"
                    android:layout_width="28dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_username" />

                <EditText
                    android:id="@+id/etUserName"
                    style="@style/EditText"
                    android:hint="@string/login_username"
                    android:textColorHint ="@color/white"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:background="@drawable/linelayout_color_bigradion">

                <ImageView
                    style="@style/ImaheView"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/etPassWord"
                    style="@style/EditText"
                    android:hint="@string/login_password"
                    android:textColorHint ="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />
                <ImageView
                    android:id="@+id/ivSeeNewPw"
                    android:layout_width="45dp"
                    android:padding="10dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_login_unsee"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/linelayout_color_bigradion"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/tvForgrtPassword"
                    style="@style/TextView"
                    android:text="@string/forgrt_password"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:textColor="@color/color_bg_selected"/>
                <View
                    android:layout_width="2dp"
                    android:layout_height="10dp"
                    android:background="@color/gray"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/tvRegister"
                    style="@style/TextView"
                    android:text="@string/login_register"
                    android:textColor="@color/color_bg_selected"
                    android:gravity="left"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="点击登录或注册表示您已阅读并同意鲁科智能检测"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《用户协议》"
                    android:textColor="@color/color_bg_selected"/>
                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="《隐私政策》"
                    android:textColor="@color/color_bg_selected"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>